--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
         <li>установить конкретное “безэкранное” время. Например — не пользоваться телефоном за едой или за час до сна.</li>
         <li>Выключать уведомления и ограничивать время в соцсетях</li>
     </ul>
-    <iframe src="https://www.meteoblue.com/ru/weather/widget/daily/ip_romania_675514? geoloc=fixed&days=4&tempunit=CELSIUS&windunit=KILOMETER_PER_HOUR&precipunit=MILLIMETER&color=color&pictoicon=1&maxtemperature=1&mintemperature=1&windspeed=1&windgust=0&winddirection=1&uv=0&humidity=0&precipitation=1&precipitation=1&precitationprobability=1&spot=1&pressure=0&layout=light" width="200" height="300"></iframe>
+    <iframe src="https://calendar.google.com/calendar/embed?src=your_email%40gmail.com" width="300" height="300"></iframe>
 </body>
 </html>
